<resources>
    <string name="app_name">中工程序设计竞赛管理助手</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_menu_home">主页</string>

    <string name="tab_menu_message">通知</string>

    <string name="tab_menu_mine">我的</string>

    <string name="tab_menu_edit">新闻</string>
    <string name="tab_menu_news">新闻</string>
    <string name="tab_menu_notice">通知</string>

    <string name="tab_menu_manage">管理</string>
    <string name="tab_menu_manage_contest">竞赛管理</string>
    <string name="tab_menu_manage_awards">获奖管理</string>
    <string name="tab_menu_manage_user">用户管理</string>
    <string name="tab_menu_manage_sign">报名管理</string>

    <string name="tab_menu_reply">答疑</string>
    <string name="title_activity_modify_contest">ModifyContestActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>


</resources>