<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User.UserActivity">



    <RadioGroup
        android:id="@+id/rg_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/bg_white"
        android:orientation="horizontal">


        <RadioButton
            android:id="@+id/rb_home"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_main"
            android:text="@string/tab_menu_home" />

        <RadioButton
            android:id="@+id/rb_message"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_notice"
            android:text="@string/tab_menu_message" />

        <RadioButton
            android:id="@+id/rb_mine"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_my"
            android:text="@string/tab_menu_mine" />


    </RadioGroup>

    <View
        android:id="@+id/div_tab_bar"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_above="@id/rg_tab_bar"
        android:background="@color/div_white" />

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/vpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/div_tab_bar"
         />
</RelativeLayout>